@@ -1,3 +1,8 @@
+Changes between 0.3.1 and 0.3.2  [XX xxx XXXX]
+
+  *) New API functions mifare_desfire_create_application_3k3des() and
+     mifare_desfire_create_application_aes().
+
 Changes between 0.3.0 and 0.3.1  [23 feb 2011]
 
   *) Fix mifare_classic_transfer() for devices returning a 1 byte response on
